# maya_umbrella_scanner

./: CHANGELOG.md  README.md  noxfile.py  pyoxidizer.bzl  pyproject.toml  requirements-dev.txt
.github/workflows/: mr-test.yml  python-publish.yml
maya_umbrella_scanner/: __main__.py  cli.py  filesystem.py  template.py
nox_actions/: release.py  utils.py
tests/: test_imports.py
